<resources>
    <string name="app_name">Quiz Programming</string>
    <string name="username_hint">Username</string>
    <string name="input_username_hint">Create Username</string>
    <string name="password_hint">Password</string>
    <string name="create_password_hint">Create Password</string>
    <string name="re_password_hint">Retype Password</string>
    <string name="sign_in">Sign In to Continue</string>
    <string name="sign_up">Sign Up to Continue</string>
    <string name="new_here">Not registered ?</string>
    <string name="create_acc">Sign Up</string>


    <string name="openNavDrawer">Navigation Drawer Open</string>
    <string name="closeNavDrawer">Navigation Drawer Close</string>
    <string name="level_3">Level 3</string>
    <string name="level">Level</string>
    <string name="level_1">Level 1</string>
    <string name="unlocked">Unlocked</string>
    <string name="play">Play</string>
    <string name="level_2">Level 2</string>
    <string name="level_4">Level 4</string>
    <string name="level_5">Level 5</string>
    <string name="level_6">Level 6</string>
    <string name="level_7">Level 7</string>
    <string name="level_8">Level 8</string>
    <string name="level_9">Level 9</string>
    <string name="level_10">Level 10</string>
    <string name="profile">Profile</string>
    <string name="lock">Locked</string>
    <string name="other_program">Other Program</string>
    <string name="java_programming">Java Programming</string>
    <string name="c_programming">C++ Programming</string>
    <string name="cprogramming">C Programming</string>
    <string name="all_categories">All Categories</string>
    <string name="complete_quiz">Completed</string>
    <string name="txt_continue">Continue</string>

</resources>