<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Background"
    tools:context=".SignIn">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50pt" />

    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foregroundGravity="center_horizontal"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="126dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="261dp"
                android:layout_height="179dp"
                android:src="@drawable/logo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.151" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Welcome"
                android:textSize="35sp"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/colorBlack" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textSize="20sp"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/colorGray"
                android:layout_marginBottom="25dp"
                android:layout_marginTop="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_account_circle_black_24dp"
                    android:layout_marginLeft="10dp" />

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username_hint"
                    android:textColor="@color/colorBlack"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="5dp"
                    android:paddingTop="10dp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_vpn_key_black_24dp"
                    android:layout_marginLeft="20dp" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="Password"
                    android:inputType="textPassword"
                    android:textColor="@color/colorBlack"
                    android:layout_marginLeft="10dp"
                    android:paddingTop="20dp" />

                <ImageButton
                    android:id="@+id/hide"
                    android:layout_width="58dp"
                    android:layout_height="58dp"
                    android:background="#0000"
                    android:src="@drawable/ic_visibility_off_black_24dp"
                    android:paddingTop="20dp"/>

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textColor="@color/Background"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="60dp"
                android:background="@drawable/round"
                android:textAllCaps="false"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_marginTop="30dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_here"
                    android:gravity="right"
                    android:textColor="#a2a"
                    android:layout_weight="1"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/create"
                    android:text="@string/create_acc"
                    android:layout_weight="1"
                    android:paddingLeft="10dp"
                    android:textColor="@color/colorBlack"
                    />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>