<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Background"
    tools:context=".SignUp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="horizontal">

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foregroundGravity="center_horizontal"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="126dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:layout_width="261dp"
                android:layout_height="179dp"
                android:src="@drawable/logo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.151" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Welcome"
                android:textSize="35sp"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/colorBlack" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textSize="20sp"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/colorGray"
                android:layout_marginBottom="25dp"
                android:layout_marginTop="10dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_account_circle_black_24dp"
                    android:layout_marginLeft="10dp" />

                <EditText
                    android:id="@+id/username_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="5dp"
                    android:textColor="@color/colorBlack"
                    android:hint="@string/input_username_hint"
                    android:paddingTop="20dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_vpn_key_black_24dp"
                    android:layout_marginLeft="20dp" />

                <EditText
                    android:id="@+id/password_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp"
                    android:hint="@string/create_password_hint"
                    android:textColor="@color/colorBlack"
                    android:inputType="textPassword"
                    android:paddingTop="20dp" />

                <ImageButton
                    android:id="@+id/hide1"
                    android:layout_width="58dp"
                    android:layout_height="58dp"
                    android:background="#0000"
                    android:src="@drawable/ic_visibility_off_black_24dp"
                    android:paddingTop="20dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_vpn_key_black_24dp"
                    android:layout_marginLeft="20dp" />

                <EditText
                    android:id="@+id/re_password_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/re_password_hint"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/colorBlack"
                    android:inputType="textPassword"
                    android:paddingTop="20dp" />

                <ImageButton
                    android:id="@+id/hide2"
                    android:layout_width="58dp"
                    android:layout_height="58dp"
                    android:background="#0000"
                    android:src="@drawable/ic_visibility_off_black_24dp"
                    android:paddingTop="20dp"/>

            </LinearLayout>

            <Button
                android:id="@+id/btn_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Sign up"
                android:textColor="@color/Background"
                android:textAllCaps="false"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="40dp"
                android:elevation="20dp"
                android:background="@drawable/round"
                android:textSize="20sp"
                android:layout_marginBottom="10dp"/>
        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        android:padding="150dp" />

</androidx.constraintlayout.widget.ConstraintLayout>