<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Background1"
    tools:context=".Home">

    <androidx.drawerlayout.widget.DrawerLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/drawer_layout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="15dp"
                    android:text="@string/all_categories"
                    android:textSize="20sp"/>

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="1dp"
                    android:orientation="vertical">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginTop="20dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal"
                            android:gravity="center"
                            android:weightSum="2">

                            <androidx.cardview.widget.CardView
                                android:id="@+id/btn_C_program"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:layout_marginEnd="5dp"
                                android:layout_marginStart="10dp"
                                app:cardCornerRadius="10dp"
                                android:layout_marginBottom="1dp">

                                <LinearLayout

                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical"
                                    android:gravity="center"
                                    android:layout_marginTop="10dp"
                                    android:layout_marginBottom="25dp"
                                    android:layout_marginLeft="10dp"
                                    android:layout_marginRight="10dp">

                                    <ImageView

                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginTop="20dp"
                                        android:src="@drawable/c_programming"
                                        android:background="@drawable/round_image"/>

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginTop="20dp"
                                        android:text="@string/cprogramming"
                                        android:textColor="@color/colorBlack"
                                        android:textSize="18sp"/>

                                </LinearLayout>

                            </androidx.cardview.widget.CardView>


                            <androidx.cardview.widget.CardView
                                android:id="@+id/btn_C_plus_program"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:layout_marginStart="5dp"
                                android:layout_marginEnd="10dp"
                                app:cardCornerRadius="10dp"
                                android:layout_marginBottom="1dp">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical"
                                    android:gravity="center"
                                    android:layout_marginTop="10dp"
                                    android:layout_marginBottom="10dp"
                                    android:layout_marginLeft="10dp"
                                    android:layout_marginRight="10dp">

                                    <ImageView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:src="@drawable/c_plus_programming"
                                        android:layout_marginTop="20dp"
                                        android:background="@drawable/round_image"/>

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginTop="20dp"
                                        android:text="@string/c_programming"
                                        android:textColor="@color/colorBlack"
                                        android:textSize="18sp"/>



                                </LinearLayout>

                            </androidx.cardview.widget.CardView>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal"
                            android:gravity="center"
                            android:layout_marginTop="5dp"
                            android:weightSum="2">

                            <androidx.cardview.widget.CardView
                                android:id="@+id/btn_Java_program"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:layout_marginStart="10dp"
                                android:layout_marginEnd="5dp"
                                android:layout_marginTop="5dp"
                                android:layout_marginBottom="10dp"
                                app:cardCornerRadius="10dp">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical"
                                    android:gravity="center"
                                    android:layout_marginTop="10dp"
                                    android:layout_marginBottom="25dp"
                                    android:layout_marginLeft="10dp"
                                    android:layout_marginRight="10dp">

                                    <ImageView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:src="@drawable/java_programming"
                                        android:layout_marginTop="20dp"
                                        android:background="@drawable/round_image"/>

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginTop="20dp"
                                        android:text="@string/java_programming"
                                        android:textColor="@color/colorBlack"
                                        android:textSize="17sp"/>



                                </LinearLayout>

                            </androidx.cardview.widget.CardView>


                            <androidx.cardview.widget.CardView
                                android:id="@+id/btn_Other_program"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:layout_marginEnd="10dp"
                                android:layout_marginStart="5dp"
                                android:layout_marginTop="5dp"
                                android:layout_marginBottom="10dp"
                                app:cardCornerRadius="10dp">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical"
                                    android:gravity="center"
                                    android:layout_marginTop="10dp"
                                    android:layout_marginBottom="10dp"
                                    android:layout_marginLeft="10dp"
                                    android:layout_marginRight="10dp">

                                    <ImageView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:src="@drawable/other"
                                        android:layout_marginTop="20dp"
                                        android:background="@drawable/round_image"/>

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginTop="20dp"
                                        android:text="@string/other_program"
                                        android:textColor="@color/colorBlack"
                                        android:textSize="18sp"/>



                                </LinearLayout>

                            </androidx.cardview.widget.CardView>

                        </LinearLayout>

                    </LinearLayout>

                </ScrollView>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/main_toolbar"
                    android:layout_width="match_parent"
                    app:titleTextColor="@color/Background1"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@color/BasicColor" />
            </com.google.android.material.appbar.AppBarLayout>
        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <com.google.android.material.navigation.NavigationView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:menu="@menu/navigation_menu"
            android:id="@+id/nav_view"
            android:layout_gravity="start"
            app:headerLayout="@layout/nav_header" />

    </androidx.drawerlayout.widget.DrawerLayout>


</androidx.constraintlayout.widget.ConstraintLayout>